<resources>
    <string name="app_name">Hermes</string>

    <string name="chat_input_default">Insert Message</string>

    <string name="event_name_input_default">Event Title</string>
    <string name="date_input_default">Enter Date (YYYY/MM/DD) </string>
    <string name="start_time_input_default">Enter Start Time in 24Hr Format (HH:MM) </string>
    <string name="end_time_input_default">Enter End Time in 24Hr Format (HH:MM) </string>
    <string name="create_event">CREATE EVENT</string>
    <string name="default_notification_channel_id">channel_ID</string>
    <string name="fcm_message">hey</string>

    <string name="done">DONE</string>

    <string name="current_date">November, 2018</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
</resources>