<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context="com.example.derinibikunle.hermes.CustomCalendarActivity"
    android:background="@color/colorWhite">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/niceBlue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:hint="@string/event_name_input_default"
            android:inputType="text"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_input_date_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@color/niceBlue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_input_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_input_default"
            android:inputType="text"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_input_start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@color/niceBlue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_input_start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/start_time_input_default"
            android:inputType="text"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_input_end_time_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@color/niceBlue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_input_end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/end_time_input_default"
            android:inputType="text"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_event"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/add_event"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>